# server

./: .gitignore  README.md  pyproject.toml
data/tables/chat/messages/: data.json
data/tables/server/apps/: data.json
omuserver/: __main__.py  fastapi_server.py
omuserver/event/: event_registry.py
omuserver/extension/: __init__.py  extension.py  extension_registry.py
omuserver/extension/endpoint/: endpoint_extension.py
omuserver/extension/registry/: registry.py  registry_extension.py
omuserver/extension/server/: server_extension.py
omuserver/extension/table/: __init__.py  cached_table.py  dict_table.py  server_table.py  session_table_handler.py  sqlitedict_table.py  table.py  table_extension.py
omuserver/extension/table/adapters/: dicttable.py  sqlitetable.py  tableadapter.py
omuserver/network/: __init__.py  fastapi_network.py  headers.py  network.py  request.py  response.py  websockets_network.py
omuserver/server/: omuserver.py  server.py  websockets_server.py
omuserver/session/: __init__.py  aiohttp_session.py  session.py  websocket_session.py  websockets_session.py
src/omuserver/: __main__.py  directories.py
src/omuserver/extension/endpoint/: endpoint_extension.py
src/omuserver/extension/message/: message_extension.py
src/omuserver/extension/plugin/: plugin_extension.py
src/omuserver/network/: aiohttp_network.py  network.py
src/omuserver/security/: security.py
src/omuserver/server/: omuserver.py  server.py
src/omuserver/session/: aiohttp_session.py  session.py
src/omuserver/utils/: __init__.py  debug.py  helper.py  python.py
(+11 files in other folders)
