[project]
name = "omuserver"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "am230", email = "111672334+am230@users.noreply.github.com" }
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0.post1",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
